# Wave-Player

./: .gitignore  CMakeLists.txt  README.md  build-macintel.yml  index.html  script.js  styles.css
.github/workflows/: build-macintel.yml
include/: SamplePlayer.h  VoiceManager.h
src/: SamplePlayer.mm  VoiceManager.cpp  main.cpp  main.mm
